--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -179,6 +179,11 @@
 .menu-element
 	float: left
 	position: relative
+	.element
+		outline: none
+		a
+			span
+				color: #000000
 //	padding-right: 19px
 
 
