main menu is improved

--- a/source/_header.html.haml
+++ b/source/_header.html.haml
@@ -84,7 +84,7 @@
 	.mainMenu
 		.menu-element{:href => '#'}
 			.dd.wrapper-dropdown-2.element{:tabindex=>"1", 'data-link' => '#' }
-				%a{:href => 'http://google.com'}
+				%a{:href => '#'}
 					%span.topElementMenuRepair
 					%span.topElement
 						%span.topElement-inner
