Service page works normal. Popup does not work

--- a/source/stylesheets/lib/_sidebar_ie.css.sass
+++ b/source/stylesheets/lib/_sidebar_ie.css.sass
@@ -1,9 +1,20 @@
-.lt-ie10
+.lt-ie9
   .sidebar-inner
     .book-service
-      box-shadow: -2px -2px #dedfe0, 1px 1px #dedfe0
-      border-radius: 12px
+      border: 0
+      width: 218px
+      background:
+        color: transparent
+        image: url('../images/leftAssignButton.png')
+        repeat: no-repeat
+      a
+        padding:
+          bottom: 13px
+          top: 13px
+          left: 30px
+        i
+          position: relative
+          zoom: 1
   .menu-element
     span
-      position: relative
       zoom: 1
