--- a/source/stylesheets/lib/_header_ie.css.sass
+++ b/source/stylesheets/lib/_header_ie.css.sass
@@ -1,6 +1,27 @@
-.lt-ie10
+.lt-ie9
   #header
+    .topLinks
+      > div
+        z-index: 10
     .right-part
-      position: inherit
-    .service-block, .info-block
+      width: unquote("expression((this.parentNode.clientWidth - parseInt(this.currentStyle['paddingLeft']) - parseInt(this.currentStyle['paddingRight'])) + 'px')")
+    .service-block
       float: left
+      .white-button
+        background:
+          color: transparent
+          image: url('../images/assingButton.png')
+          repeat: no-repeat
+        width: 200px
+        height: 30px
+    .info-block
+      margin-top: 10px
+      margin-right: 30px
+    .service-block, .info-block
+      zoom: 1
+      *display: inline
+    .mainMenu
+      .topElement
+        top: -4px
+      div.menu-element ul.dropdown-menu
+        top: 100%
