--- a/source/stylesheets/lib/_header_ie.css.sass
+++ b/source/stylesheets/lib/_header_ie.css.sass
@@ -1,3 +1,10 @@
+.lt-ie8
+  #header
+    .mainMenu
+      .topElement
+        top: -4px !important
+        text-decoration: none
+
 .lt-ie9
   #header
     .topLinks
@@ -22,6 +29,6 @@
       *display: inline
     .mainMenu
       .topElement
-        top: -4px
+        top: 16px
       div.menu-element ul.dropdown-menu
         top: 100%
