Fixing path problems

--- a/source/_sidebar.html.haml
+++ b/source/_sidebar.html.haml
@@ -44,7 +44,7 @@
             Записаться
       .right-map
         #yamap{:style => 'width: 560px; height: 445px'}
-        = javascript_include_tag 'yamap'
+        %script{:type => 'text/javascript', :src => 'javascripts/yamap.js'}
 
 
   %ul.service-list
