--- a/source/stylesheets/lib/ie_yamap.css.sass
+++ b/source/stylesheets/lib/ie_yamap.css.sass
@@ -22,7 +22,9 @@ $fgcolor_a: #f27f35
             bottom: 10px
       .services
         li:hover
-          margin-left: 2px
+          margin:
+            left: 2px
+            right: 2px
 
 .lt-ie9
   #yamap
