--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -49,7 +49,7 @@
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.jcarousel.min.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/application.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.corner.js'}
-    %script{:type => "text/javascript", :src => "//vk.com/js/api/openapi.js?98"}
+    %script{:type => "text/javascript", :src => "http://vk.com/js/api/openapi.js?98"}
 
     %script{:type => "text/javascript"}
       VK.init({apiId: 3831693, onlyWidgets: true});
