Fixed size image

--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -112,22 +112,22 @@
 				%ul.footerUl
 					%li
 						%a{:href=>"#"}
-							%span.lImVk
+							%span.lImVk.im
 							%span.liName
 								Мы Вконтакте
 					%li
 						%a{:href=>"#"}
-							%span.lImTwit
+							%span.lImTwit.im
 							%span.liName
 								Мы в Twitter
 					%li
 						%a{:href=>"#"}
-							%span.lImFace
+							%span.lImFace.im
 							%span.liName
 								Мы в Facebook
 					%li
 						%a{:href=>"#"}
-							%span.lImYoutube
+							%span.lImYoutube.im
 							%span.liName
 								Мы на Youtube
 		.siteMap
