--- a/source/stylesheets/lib/_ie_footer.css.sass
+++ b/source/stylesheets/lib/_ie_footer.css.sass
@@ -6,6 +6,10 @@
         .jcarousel-container-horizontal
           width: unquote("expression((document.getElementById('footer').clientWidth - parseInt(this.currentStyle['paddingLeft']) - parseInt(this.currentStyle['paddingRight'])) + 'px')")
     .footerData
+      .footerUl
+        span.im
+          zoom: 1
+          width: 0px
       .footerTel
         .info-block
           margin-top: 30px
