--- a/source/stylesheets/lib/ie_one_news.css.sass
+++ b/source/stylesheets/lib/ie_one_news.css.sass
@@ -18,8 +18,9 @@
           repeat: no-repeat
         width: 131px
         height: 18px
+        text-align: center
         padding:
-          left: 7px
+          left: 5px
           right: 5px
       .newscontent
         padding-top: 0px
