--- a/source/stylesheets/lib/yamap.css.sass
+++ b/source/stylesheets/lib/yamap.css.sass
@@ -71,13 +71,18 @@ ymaps.ymaps-outer-pane
       height: 180px
       overflow: hidden
       position: relative
+      img
+        width: 300px
+        height: 180px
       .balloon_close
         position: absolute
         top: 5px
         right: 5px
         width: 17px
         height: 17px
-        background-image: url('../images/balloon_close.png')
+        background:
+          image: url('../images/balloon_close.png')
+          repeat: no-repeat
       .balloon_absolute
         position: absolute
         bottom: 0
