header menu is improved

--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -218,6 +218,12 @@
 	span.round-end
 		background: url(../images/menu_element_active_round_end.png) no-repeat
 
+.menu-element.hover
+	.topElement-inner
+		background: url(../images/menu_elem_active_background.png) repeat-x
+	span.round-end
+		background: url(../images/menu_element_active_round_end.png) no-repeat
+
 /* topElementMenuRepair topElementMenuDiag topElementMenuTO topElementMenuInstall topElementMenuShin topElementMenuService*/
 .topElementMenuRepair, .topElementMenuDiag, .topElementMenuTO, .topElementMenuInstall, .topElementMenuShin, .topElementMenuService
 	padding-left: 50px
