success details page styling with bugs

--- a/source/_header_min.html.haml
+++ b/source/_header_min.html.haml
@@ -23,7 +23,10 @@
 		%ul.menu
 			%li
 				%a{:href => '#'}
-					форматы станций
+					%em.left
+					%span
+						форматы станций
+					%em.right
 			%li
 				%a{:href => '#'}
 					наш бренд
@@ -32,7 +35,10 @@
 					10 основных преимуществ
 			%li
 				%a.active{:href => '#'}
-					истории успеха
+					%em.left
+					%span
+						истории успеха
+					%em.right
 			%li
 				%a{:href => '#'}
 					требования к франчайзи
