--- a/source/franshiza.html.haml
+++ b/source/franshiza.html.haml
@@ -103,8 +103,10 @@
 		.right-block
 			.buy-button-block
 				%button.orange{'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
+					%em.left
 					КУПИТЬ ФРАНШИЗУ PREMIUM
 					%i.icon-angle-right
+					%em.right
 			.plan
 				%span.h3.small.with-top-margin
 					ПЛАНИРОВКА
@@ -285,8 +287,10 @@
 		.right-block
 			.buy-button-block
 				%button.orange{'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
+					%em.left
 					КУПИТЬ ФРАНШИЗУ STANDART
 					%i.icon-angle-right
+					%em.right
 			.plan
 				%span.h3.small.with-top-margin
 					ПЛАНИРОВКА
@@ -467,8 +471,10 @@
 		.right-block
 			.buy-button-block
 				%button.orange{'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
+					%em.left
 					КУПИТЬ ФРАНШИЗУ EXPRESS
 					%i.icon-angle-right
+					%em.right
 			.plan
 				%span.h3.small.with-top-margin
 					ПЛАНИРОВКА
