--- a/source/stylesheets/lib/_fonts.css.sass
+++ b/source/stylesheets/lib/_fonts.css.sass
@@ -1,42 +1,52 @@
 @font-face
 	font-family: PTSans
+	src: url(fonts/pt-sans.eot?)
 	src: url(fonts/pt-sans.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-italic
-	src: url(fonts/pt-sans-italic.ttf) format('truetype')
+	src: url(fonts/pt-sans-italic.eot?)
+	src: url(fonts/pt-sans-italic.eot), url(fonts/pt-sans-italic.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-bold
-	src: url(fonts/pt-sans-bold.ttf) format('truetype')
+	src: url(fonts/pt-sans-bold.eot?)
+	src: url(fonts/pt-sans-bold.eot), url(fonts/pt-sans-bold.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-bold-italic
-	src: url(fonts/pt-sans-bold-italic.ttf) format('truetype')
+	src: url(fonts/pt-sans-bold-italic.eot?)
+	src: url(fonts/pt-sans-bold-italic.eot), url(fonts/pt-sans-bold-italic.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-caption
-	src: url(fonts/pt-sans-caption.ttf) format('truetype')
+	src: url(fonts/pt-sans-caption.eot?)
+	src: url(fonts/pt-sans-caption.eot), url(fonts/pt-sans-caption.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-caption-bold
-	src: url(fonts/pt-sans-caption-bold.ttf) format('truetype')
+	src: url(fonts/pt-sans-caption-bold.eot?)
+	src: url(fonts/pt-sans-caption-bold.eot), url(fonts/pt-sans-caption-bold.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-narrow
-	src: url(fonts/pt-sans-narrow.ttf) format('truetype')
+	src: url(fonts/pt-sans-narrow.eot?)
+	src: url(fonts/pt-sans-narrow.eot), url(fonts/pt-sans-narrow.ttf) format('truetype')
 
 @font-face
 	font-family: PTSans-narrow-bold
-	src: url(fonts/pt-sans-narrow-bold.ttf) format('truetype')
+	src: url(fonts/pt-sans-narrow-bold.eot?)
+	src: url(fonts/pt-sans-narrow-bold.eot), url(fonts/pt-sans-narrow-bold.ttf) format('truetype')
 
 @font-face
 	font-family: NeoSansPro-light
-	src: url(fonts/Neo_Sans_Pro_Light.ttf) format('truetype')
+	src: url(fonts/Neo_Sans_Pro_Light.eot?)
+	src: url(fonts/Neo_Sans_Pro_Light.eot), url(fonts/Neo_Sans_Pro_Light.ttf) format('truetype')
 
 @font-face
 	font-family: NeoSansPro-bold
-	src: url(fonts/Neo_Sans_Pro_Bold.ttf) format('truetype')
+	src: url(fonts/Neo_Sans_Pro_Bold.eot?)
+	src: url(fonts/Neo_Sans_Pro_Bold.eot), url(fonts/Neo_Sans_Pro_Bold.ttf) format('truetype')
 
 
 
