--- a/source/stylesheets/lib/_form_ie7.css.sass
+++ b/source/stylesheets/lib/_form_ie7.css.sass
@@ -2,7 +2,8 @@
 	input, select, textarea, label
 		width: 200px
 	input, select
-		height: 30px
+		height: 24px
+		background-image: url('../images/input-background.png')
 	textarea
 		height: 80px
 		resize: none
