--- a/source/stylesheets/lib/_franshiza_popover.css.sass
+++ b/source/stylesheets/lib/_franshiza_popover.css.sass
@@ -16,10 +16,23 @@
 	input
 		width: 208px
 
-	.orange
-		min-height: 20px
+	.orange.orange-small
+		em.left
+			width: 25px
+			height: 45px
+			top: 0px
+			background: url('../images/uns-btn-left.png') 0px 0px no-repeat
+		em.right
+			width: 23px
+			height: 46px
+			top: 0px
+			background: url('../images/uns-btn-right.png') 0px 0px no-repeat
 		line-height: 16px
-		padding: 5px 30px 5px 10px
+		background: url('../images/uns-btn-center.png') 0px 0px repeat-x
+		position: relative
+		border: none
+		margin-left: 20px
+		height: 45px
 
 .modal
 	a
