--- a/source/stylesheets/lib/_presentations.css.sass
+++ b/source/stylesheets/lib/_presentations.css.sass
@@ -16,6 +16,7 @@
       vertical-align: middle
       border: none
       background-image: url('../images/franchise_buy.png')
+      background-repeat: no-repeat
       float: right
       width: 212px
       height: 46px
