--- a/source/stylesheets/main2_ie7.css.sass
+++ b/source/stylesheets/main2_ie7.css.sass
@@ -1,25 +1,10 @@
-@import "lib/bootstrap"
-@import "lib/fonts"
-@import "lib/form"
-@import "lib/font-awesome"
-@import 'lib/header_min'
-@import 'lib/footer_min'
-@import 'lib/franshiza'
-@import "lib/jquery.bxslider"
-@import 'lib/date'
-@import 'lib/button_composite'
-@import 'lib/custom-select'
-@import 'lib/paginator'
-@import 'lib/container'
-@import 'lib/skin'
-@import 'lib/skin2'
-@import 'lib/dropdown'
-@import 'lib/noJS'
-@import 'lib/presentations'
-@import 'lib/successDetails'
-@import 'lib/successHistory'
-@import 'lib/franshiza-page'
-@import 'lib/franshiza_popover'
+@import 'lib/header_min_ie7'
+@import 'lib/footer_min_ie7'
+@import 'lib/franshiza_ie7'
+@import 'lib/form_ie7'
+@import 'lib/button_composite_ie7'
+@import 'lib/franshiza-page-ie7'
+
 
 body
 	font-family: PTSans
