--- a/source/success_details.html.haml
+++ b/source/success_details.html.haml
@@ -31,11 +31,11 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции.
 
 			%li.blog-elem
 				%a.success-box.sb-left{:href => '#'}
@@ -44,11 +44,11 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
 			%li.blog-elem
 				%a.success-box.sb-left{:href => '#'}
 					.pic-box
@@ -56,11 +56,11 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
 			%li.blog-elem
 				%a.success-box.sb-left{:href => '#'}
 					.pic-box
@@ -68,11 +68,11 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
 			%li.blog-elem
 				%a.success-box.sb-left{:href => '#'}
 					.pic-box
@@ -80,11 +80,11 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
 			%li.blog-elem
 				%a.success-box.sb-left{:href => '#'}
 					.pic-box
@@ -92,11 +92,11 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
 			%li.blog-elem
 				%a.success-box.sb-left{:href => '#'}
 					.pic-box
@@ -104,9 +104,20 @@
 					.tips
 						.tips-type
 						%img{:src => 'images/premium-type.png'}
-					.tips-address
-						НОВОСИБИРСК, МИРА 91
-					.tips-body
-						Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
-						Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
 			%li.blog-elem
+				%a.success-box.sb-left{:href => '#'}
+					.pic-box
+						%img{:src => 'images/story-pic-1.png'}
+					.tips
+						.tips-type
+						%img{:src => 'images/premium-type.png'}
+						.tips-address
+							НОВОСИБИРСК, МИРА 91
+						.tips-body
+							Изменение глобальной стратегии концентрирует анализ рыночных цен, работая над проектом.
+							Клиентский спрос поддерживает тактический комплексный анализ ситуации, учитывая современные тенденции
