--- a/source/_franshiza.html.haml
+++ b/source/_franshiza.html.haml
@@ -19,12 +19,14 @@
 			%label{:for => 'user_phone'}
 				Ваш телефон
 			%input{:type => 'tel', :id => 'user_phone', :placeholder => '+7 ( _ _ _ ) _ _ _-_ _-_ _',
-			 	:required => 'true',
+				:required => 'true',
 				:pattern => '\+7 \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}'}
 			.align-right
 				%button.orange{:type => 'submit'}
+					%em.left
 					ОТПРАВИТЬ ЗАЯВКУ
 					%i.icon-angle-right
+					%em.right
 
 	.elem3
 		%span.h3.small
