--- a/source/_franshiza_popver.html.haml
+++ b/source/_franshiza_popver.html.haml
@@ -23,9 +23,11 @@
 				:required => 'true',
 				:pattern => '\+7 \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}'}
 			.align-right
-				%button.orange{:type => 'submit'}
+				%button.orange.orange-small{:type => 'submit'}
+					%em.left
 					ОТПРАВИТЬ ЗАЯВКУ
 					%i.icon-angle-right
+					%em.right
 
 
 :javascript
