--- a/source/layouts/layout_min.haml
+++ b/source/layouts/layout_min.haml
@@ -34,7 +34,7 @@
     -# Stylesheets
     %link{:rel => 'stylesheet', :type => 'text/css', :href => 'stylesheets/main2.css'}
     %link{:href => 'http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic', :rel => 'stylesheet', :type =>'text/css'}
-
+    /[if IE 7] <link rel="stylesheet" type="text/css" href="stylesheets/main2_ie7.css"/>
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.min.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.bxslider.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.customSelect.js'}
