--- a/source/stylesheets/lib/_header_min_ie7.css.sass
+++ b/source/stylesheets/lib/_header_min_ie7.css.sass
@@ -4,6 +4,8 @@
 		background: url(../images/logo_on_white.jpg) no-repeat left center
 		color: #939598
 		display: inline-block
+		*display: inline
+		zoom: 1
 		font:
 			family: PTSans-bold
 			size: 13px
@@ -13,10 +15,12 @@
 		padding-left: 190px
 		text-transform: uppercase
 		vertical-align: middle
-		width: 432px
+		width: 240px
 
 	.link_block
 		display: inline-block
+		*display: inline
+		zoom: 1
 		text-align: center
 		span.header_link
 			margin-left: 25px
@@ -28,6 +32,8 @@
 	i.icon-header-portal
 		background: url(../images/icons.png) no-repeat 0 0
 		display: inline-block
+		*display: inline
+		zoom: 1
 		width: 15px
 		height: 15px
 		margin: 1px 2px 0
@@ -36,15 +42,22 @@
 	i.icon-header-service
 		background: url(../images/icons.png) no-repeat -18px 0
 		display: inline-block
+		*display: inline
+		zoom: 1
 		width: 15px
 		height: 15px
 		margin: 1px 2px 0
 		vertical-align: text-top
 
 	#header_phone
+		margin-left: 51px
+		padding-top: 10px
+		line-height: 30px
+		float: none
 		color: #100b0c
 		display: inline-block
-		float: right
+		*display: inline
+		zoom: 1
 		font:
 			family: NeoSansPro-light
 			weight: normal
@@ -71,14 +84,15 @@
 		ul.menu
 			list-style: none
 			padding: 0
-			margin: 0 auto
+			margin: 0px
 
 			li
-				margin: 0 auto
+				margin: 0px
 				float: left
 				a
 					color: #fff
 					display: block
+					zoom: 1
 					font:
 						family: PTSans
 						style: normal
@@ -92,19 +106,21 @@
 
 				a.active
 					span
-						margin-top: -1px
-						margin-right: -4px
-						margin-left: -4px
+						margin-top: 0px
+						margin-right: 0px
+						margin-left: 0px
 						vertical-align: middle
 						display: inline-block
 						background: url('../images/m-btn-center.png') 0px 0px repeat-x
 					em.left
 						vertical-align: middle
+						margin-top: 1px
 						height: 39px
 						width: 19px
 						display: inline-block
 						background: url('../images/m-btn-left.png') 0px 0px no-repeat
 					em.right
+						margin-top: 1px
 						vertical-align: middle
 						height: 39px
 						width: 20px
