--- a/source/stylesheets/lib/_successDetails.css.sass
+++ b/source/stylesheets/lib/_successDetails.css.sass
@@ -20,10 +20,13 @@ $color_white: #fff
     float: right
     border: none
     background-image: url('../images/franchise_buy.png')
+    background-repeat: no-repeat
     width: 212px
     height: 46px
     text-align: center
     color: #fff
+    *display: inline
+    zoom: 1
     .arrow
       vertical-align: bottom
       display: inline-block
@@ -36,6 +39,8 @@ $color_white: #fff
     margin-right: 32px
     display: inline-block
     vertical-align: top
+    *display: inline
+    zoom: 1
     h1
       width: 650px
       display: inline
@@ -48,6 +53,8 @@ $color_white: #fff
       display: inline-block
       position: relative
       top: -2px
+      *display: inline
+      zoom: 1
     .newscontent
       padding-top: 20px
       line-height: 25px
@@ -108,6 +115,8 @@ $color_white: #fff
   vertical-align: top
   width: 242px
   margin-top: 20px
+  *display: inline
+  zoom: 1
   div
     margin-bottom: 20px
 
@@ -126,8 +135,8 @@ a.success-box
   background-color: #f7f8f8
   display: inline-block
   width: 333px
-  height: 434px
-  border-bottom: solid 2px #f27d32
+  height: 432px
+  border-bottom: 2px solid #f27d32
   .pic-box
     z-index: 1
     width: 333px
@@ -137,7 +146,7 @@ a.success-box
     padding-left: 15px
     padding-right: 15px
     .tips-type
-      margin-top: -15px
+      margin-top: -41px
       z-index: 100
       min-width: 40px
       height: 28px
