ymap balloon menu is improoved

--- a/source/stylesheets/lib/yamap.css.sass
+++ b/source/stylesheets/lib/yamap.css.sass
@@ -116,7 +116,7 @@ ymaps.ymaps-outer-pane
       border-bottom: 0
       > div
         display: none
-      .repair, .diagnostics, .plan, .replace, .tireservice
+      .repair, .diagnostics, .plan, .replace, .tireservice, .main-info
         &.active
           display: block
       p, a
