Commit commit commit

--- a/source/presentations.html.haml
+++ b/source/presentations.html.haml
@@ -1,11 +1,14 @@
+= partial 'franshiza_popver'
+
 .presentation-box
   .title-row
     .title
       ПРЕЗЕНТАЦИИ
-    %a
-      КУПИТЬ ФРАНШИЗУ
-      .arrow
-        >
+    %button.orange.orange-small{'data-toggle' => 'modal', 'data-target' => '#franshiza-modal'}
+      %em.left
+      купить франшизу
+      %i.icon-angle-right
+      %em.right
     .flatten
   .ssh-row
     .ssh-box-left
