--- a/source/stylesheets/lib/_button_composite_ie7.css.sass
+++ b/source/stylesheets/lib/_button_composite_ie7.css.sass
@@ -20,6 +20,10 @@ button.orange
 	i
 		z-index: 2
 		font-size: 18px
+		width: 9px
+		height: 14px
+		background: url('../images/confirm_arrow.png') 0px 0px no-repeat
+
 
 
 button.orange em.right
