--- a/source/stylesheets/lib/_form_ie7.css.sass
+++ b/source/stylesheets/lib/_form_ie7.css.sass
@@ -3,7 +3,8 @@
 		width: 200px
 	input, select
 		height: 24px
-		background-image: url('../images/input-background.png')
+		width: 196px
+		//background-image: url('../images/input-background.png')
 	textarea
 		height: 80px
 		resize: none
