--- a/source/stylesheets/main2_ie7.css.sass
+++ b/source/stylesheets/main2_ie7.css.sass
@@ -4,6 +4,7 @@
 @import 'lib/form_ie7'
 @import 'lib/button_composite_ie7'
 @import 'lib/franshiza-page-ie7'
+@import 'lib/franshiza_popover_ie7'
 
 
 body
