--- a/source/stylesheets/lib/_franshiza_popover_ie7.css.sass
+++ b/source/stylesheets/lib/_franshiza_popover_ie7.css.sass
@@ -14,16 +14,18 @@
 		color: #ed4d30
 		margin: 20px 0 15px
 	input
-		width: 208px
+		width: 196px
+		border: 1px solid #f5f5f5
+		border-bottom: 2px solid #c6c6c6
 
 	.orange.orange-small
 		em.left
-			width: 27px
+			width: 25px
 			height: 45px
 			top: 0px
-			background: url('../images/uns-btn-left.png') 2px 0px no-repeat
+			background: url('../images/uns-btn-left.png') 0px 0px no-repeat
 		em.right
-			width: 27px
+			width: 23px
 			height: 46px
 			top: 0px
 			background: url('../images/uns-btn-right.png') 0px 0px no-repeat
@@ -33,7 +35,6 @@
 		border: none
 		margin-left: 20px
 		height: 45px
-		margin-right: 0px
 
 .modal
 	a
@@ -44,4 +45,4 @@
 			right: 4px
 			width: 18px
 			height: 18px
-			background: url('../images/close.png') no-repeat
+			background: url(../images/close.png) no-repeat
