--- a/source/stylesheets/lib/franshiza-page.css.sass
+++ b/source/stylesheets/lib/franshiza-page.css.sass
@@ -36,6 +36,7 @@
 					border-bottom: 1px dashed #ed4d30
 					display: inline-block
 					line-height: 18px
+					*line-height: 23px
 					text-decoration: none
 					font:
 						family: PTSans
