Yay! End of #M8 fixed time 5d

--- a/source/_main_gallery.html.haml
+++ b/source/_main_gallery.html.haml
@@ -4,13 +4,29 @@
 			АКЦИИ
 		#bx-slider-custom-pager
 			%a{:href=>'#', 'data-slide-index' => 0}
-				Экспресс-Замена технических жидкостей
+				Экспресс-Замена
+				%br
+				технических жидкостей
+				%i.icon-angle-right
+					&#xf105;
 			%a{:href=>'#', 'data-slide-index' => 1}
-				Полная диагностика за 2000 рублей
+				Полная диагностика
+				%br
+				за 2000 рублей
+				%i.icon-angle-right
+					&#xf105;
 			%a{:href=>'#', 'data-slide-index' => 2}
-				Скидка 30% на ремонт стоек
+				Скидка 30%
+				%br
+				на ремонт стоек
+				%i.icon-angle-right
+					&#xf105;
 			%a{:href=>'#', 'data-slide-index' => 3}
-				Приведи друга - получи диагностику бесплатно
+				Приведи друга - получи
+				%br
+				диагностику бесплатно
+				%i.icon-angle-right
+					&#xf105;
 
 		%a.all{:href=>''}
 			Все акции
@@ -34,6 +50,7 @@
 								УЗНАТЬ БОЛЬШЕ
 								&nbsp;
 								%i.icon-angle-right
+									&#xf105;
 
 			%li
 				.elem
@@ -52,6 +69,7 @@
 								УЗНАТЬ БОЛЬШЕ
 								&nbsp;
 								%i.icon-angle-right
+									&#xf105;
 
 			%li
 				.elem
@@ -70,6 +88,7 @@
 								УЗНАТЬ БОЛЬШЕ
 								&nbsp;
 								%i.icon-angle-right
+									&#xf105;
 
 			%li
 				.elem
@@ -89,6 +108,7 @@
 								УЗНАТЬ БОЛЬШЕ
 								&nbsp;
 								%i.icon-angle-right
+									&#xf105;
 
 
 :javascript
