--- a/source/stylesheets/lib/_button.css.sass
+++ b/source/stylesheets/lib/_button.css.sass
@@ -25,6 +25,8 @@ button.orange
 		right: 15px
 		top: 50%
 		margin-top: -10px
+		&:before
+			content: none
 
 button.orange:before
 	box-sizing: content-box
