--- a/source/stylesheets/main_ie.css.sass
+++ b/source/stylesheets/main_ie.css.sass
@@ -3,3 +3,7 @@
 @import 'lib/ie_one_news'
 @import 'lib/ie_footer'
 @import 'lib/ie_yamap'
+@import 'lib/ie_blog'
+@import 'lib/ie_stations'
+@import 'lib/ie_button'
+@import 'lib/ie_main_gallerry'
