--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -72,7 +72,7 @@
 				background-color: #ed4d30
 				padding-right: 20px
 
-			a.active:before
+			i.icon-angle-right
 				box-sizing: content-box
 				-moz-box-sizing: content-box
 				-webkit-box-sizing: content-box
@@ -80,13 +80,14 @@
 				font-size: 22px
 				padding-top: 18px
 				height: 29px
-				content: "\f105"
 				z-index: 3
 				position: absolute
 				right: -20px
 				top: 0px
 				width: 25px
 				color: #fff
+				&:before
+					content: none
 
 			a.active:after
 				box-sizing: content-box
@@ -186,4 +187,6 @@
 						-webkit-transform: skewX(12deg)
 						transform: skewX(12deg)
 						i
-							font-size: 18px
+						font-size: 18px
+						&:before
+							content: none
