bx-slider ie7 fixed

--- a/source/layouts/layout_min.haml
+++ b/source/layouts/layout_min.haml
@@ -44,6 +44,7 @@
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.jcarousel.min.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/jquery.maskedinput.js'}
     %script{:type => 'text/javascript', :src => 'javascripts/application.js'}
+    %script{:type => 'text/javascript', :src => 'javascripts/bx-slider-small.js'}
   %body{class: current_page.data.body_class || 'page'}
     #container
       #inner-container
