--- a/source/stylesheets/lib/franshiza-page-ie7.css.sass
+++ b/source/stylesheets/lib/franshiza-page-ie7.css.sass
@@ -17,3 +17,18 @@
 					i.icon-angle-up
 						vertical-align: middle
 						background: url('../images/dropdown_arrow_up.png')
+
+		.right-block
+			.example-gallery
+				.controls-block
+					.bx-wrapper
+						margin-bottom: -10px
+					.prev-link,
+					.next-link
+						margin-top: -22px
+
+					.prev-link
+						background: url(../images/prev-arr.png) left top no-repeat
+
+					.next-link
+						background: url(../images/next-arr.png) left top no-repeat
