--- a/source/stylesheets/lib/_franshiza_ie7.css.sass
+++ b/source/stylesheets/lib/_franshiza_ie7.css.sass
@@ -1,4 +1,5 @@
 .franshiza_container
+	height: 257px
 	background-color: #f7f8f8
 	margin-right: 0px
 	padding-right: 0px
@@ -52,3 +53,5 @@
 	.logn-margin
 		margin-left: 70px
 		margin-right: 70px
+	button.orange
+		position: relative
