Speed fix bag about menu and carousel

--- a/source/_footer.html.haml
+++ b/source/_footer.html.haml
@@ -2,23 +2,23 @@
 	.carousel
 		%ul#mycarousel.jcarousel-skin-tango
 			%li
-				%img{:src=>"img/carousel/1.png"}
+				%img{:src=>"img/carousel/1b.png"}
 			%li
-				%img{:src=>"img/carousel/2.png"}
+				%img{:src=>"img/carousel/2b.png"}
 			%li
-				%img{:src=>"img/carousel/3.png"}
+				%img{:src=>"img/carousel/3b.png"}
 			%li
-				%img{:src=>"img/carousel/4.png"}
+				%img{:src=>"img/carousel/4b.png"}
 			%li
-				%img{:src=>"img/carousel/5.png"}
+				%img{:src=>"img/carousel/5b.png"}
 			%li
-				%img{:src=>"img/carousel/6.png"}
+				%img{:src=>"img/carousel/6b.png"}
 			%li
-				%img{:src=>"img/carousel/7.png"}
+				%img{:src=>"img/carousel/7b.png"}
 			%li
-				%img{:src=>"img/carousel/8.png"}
+				%img{:src=>"img/carousel/8b.png"}
 			%li
-				%img{:src=>"img/carousel/9.png"}
+				%img{:src=>"img/carousel/9b.png"}
 	.footerData.whiteFont
 		.footerMenuElement
 			.footerMenuElementMiddle
