--- a/source/stylesheets/lib/_dropdown.css.sass
+++ b/source/stylesheets/lib/_dropdown.css.sass
@@ -90,6 +90,8 @@
 
 .menu-element .dropdown li a
 	display: block
+	position: relative
+	margin-left: 15px
 	text-decoration: underline
 	color: #ed4d30
 	padding: 5px 10px 5px 10px
@@ -102,9 +104,11 @@
 
 #header .wrapper-dropdown-top .dropdown li a
 	display: block
+	position: relative
 	text-decoration: underline
 	color: #ed4d30
 	padding: 5px 10px 5px 10px
+	margin-left: 15px
 	-webkit-transition: all 0.3s ease-out
 	-moz-transition: all 0.3s ease-out
 	-ms-transition: all 0.3s ease-out
@@ -154,10 +158,12 @@ div.menu-element ul.dropdown-menu.no-border
 	-webkit-border-right-widht: 0
 	-moz-border-right-widht: 0
 .menu-element .dropdown li .lIm
-	position: relative
-	top: 3px
+	position: absolute
+	top: 10px
+	left: -5px
 	padding-left: 20px
 	padding-bottom: 3px
+	height: 15px
 	border: none
 	background: url('../img/headerMenuDot.png') no-repeat
 
@@ -177,10 +183,12 @@ div.wrapper-dropdown-top ul.dropdown-menu.no-border
 	-webkit-border-right-widht: 0
 	-moz-border-right-widht: 0
 .wrapper-dropdown-top .dropdown li .lIm
-	position: relative
-	top: 3px
+	position: absolute
+	top: 10px
+	left: -5px
 	padding-left: 20px
 	padding-bottom: 3px
+	height: 15px
 	border: none
 	background: url('../img/headerMenuDot.png') no-repeat
 
