--- a/source/stylesheets/lib/_main_gallery.css.sass
+++ b/source/stylesheets/lib/_main_gallery.css.sass
@@ -71,6 +71,7 @@
 			a.active
 				background-color: #ed4d30
 				padding-right: 20px
+				border-bottom: none
 
 			i.icon-angle-right
 				box-sizing: content-box
