Fix bags: underline for menu, tell friends buttons, more space under blogs elements

--- a/source/stylesheets/lib/_header.css.sass
+++ b/source/stylesheets/lib/_header.css.sass
@@ -211,10 +211,12 @@
 		padding: 9px 0 9px 22px
 		margin-left: -22px
 		display: inline-block
+		text-decoration: underline
 
 .menu-element.open
 	.topElement-inner
 		background: url(../images/menu_elem_active_background.png) repeat-x
+		text-decoration: none
 	span.round-end
 		background: url(../images/menu_element_active_round_end.png) no-repeat
 
