--- a/source/stylesheets/lib/one_news.css.sass
+++ b/source/stylesheets/lib/one_news.css.sass
@@ -99,12 +99,10 @@ $color_white: #fff
 	border-bottom: 1px solid $color_orange
 	background-color: $color_light_grey
 	text-align: left
-	#vk_like, #fb-root, #twitter_twit
-		position: relative
-		top: 5px
+	> *
+		display: inline-block
+	> div
 		width: 20%
-	*
-		display: inline
 	script
 		display: none !important
 
@@ -121,7 +119,7 @@ $color_white: #fff
 		.jcarousel-container-horizontal
 			padding: 20px 5px
 		.jcarousel-clip-horizontal
-			height: 215px
+			height: 240px
 		.jcarousel-prev-horizontal
 			top: 80px
 			left: -3px
